# fund

./: .bandit  .gitattributes  .gitignore  .markdownlint.json  .markdownlint.jsonc  .pre-commit-config.yaml  .prettierignore  .prettierrc.cjs  .stylelintignore  .stylelintrc.cjs  AGENTS.md  CLAUDE.md  CNAME  CONTRIBUTING.md  Makefile  README.md  _config.yml  _headers  benchmark_calculate_stats.py  benchmark_full.py  benchmark_n_plus_1.py  benchmark_n_plus_1_large.py  benchmark_ratios.py  benchmark_speedup.py  commit_msg.txt  eslint.config.cjs  eslint_complexity_report.json  eslint_report.json  files_with_aliases.txt  fix_calcs.js  fix_dataloader_test.js  fix_dataloader_test2.js  fix_dataloader_test3.js  fix_python_stubs.sh  fix_script.py  fix_test.js  fix_tests.js  format_fixes.py  fund_data.json  index.html  (+53 more)
.claude/: launch.json  settings.json
.gemini/: GEMINI.md
.githooks/: pre-commit
.github/: CODEOWNERS  dependabot.yml  labels.json
.husky/: commit-msg  pre-commit  pre-push
.jules/: architect.md  bolt.md  janitor.md  palette.md  sentinel.md  testpilot.md  typist.md
ai/: README.md
analysis/: index.html
assets/: manifest.webmanifest
calendar/: index.html
composition/: index.html
css/: analysis-proto.css  base.css  calendar.css  cinematic_ux.css  container.css  cursor.css  intro.css  layout.css  main_index.css  marquee.css  perf.css  table.css  toggle.css  transaction.css
data/: benchmark_history.json  daily_cash_flow.parquet  daily_market_value.parquet  delisted_tickers.csv  etf_hhi.json  etf_hhi_data.json  fund_country_allocations.json  (+18 more)
(+676 files in other folders)
