# Python tooling config (ruff/black); mypy lives in mypy.ini

[tool.black]
line-length = 100
target-version = ["py311"]
skip-string-normalization = true

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["venv", ".venv", ".mypy_cache", ".ruff_cache"]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
]
ignore = [
  "E501",  # handled by black (line length)
]
per-file-ignores = { "bin/*" = ["E402"] }

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fund-cli"
version = "0.1.0"
description = "Fund portfolio management CLI"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Fund" }]

[project.scripts]
fund = "scripts.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]
